Minor fix and docs update in doesInstanceofCompile + tests